Fix travis, closes #9

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
 - wget -O boot https://github.com/boot-clj/boot/releases/download/2.0.0-rc4/boot.sh
 - chmod 755 boot
 - ./boot -V
-script: ./boot serve -d target/ reload cljs-repl cljs -usO none
+script: ./boot serve -d target/ reload cljs-repl cljs -sO none
