--- a/boot.properties
+++ b/boot.properties
@@ -1,2 +1,5 @@
+#http://boot-clj.com
+#Thu Feb 04 07:43:13 EST 2016
+BOOT_CLOJURE_NAME=org.clojure/clojure
 BOOT_CLOJURE_VERSION=1.7.0
-BOOT_VERSION=2.1.2
+BOOT_VERSION=2.5.5
